--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .page-footer {
-  // background-color: $main_grey_color;
+  background-color: $main_grey_color;
 }
 
 .page-footer__contacts {
