--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -5,13 +5,20 @@ body {
 
 .copyright {
   display: flex;
+  // flex-shrink: 1;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 17px 0 19px 0;
 
   @media (min-width: $tablet-breakpoint) {
+    flex-basis: 25%;
     justify-content: flex-end;
+    // justify-content: space-between;
+    padding: 0;
+
+
+    // padding-left: 73px;
   }
 }
 
@@ -55,6 +62,14 @@ body {
   background-position: center center;
   background-size: cover;
   // background-size: 28px 35px;
+
+  @media (min-width: $tablet-breakpoint) {
+    margin-left: 18px;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 // .icon-logo {
