--- a/source/sass/blocks/footer-links.scss
+++ b/source/sass/blocks/footer-links.scss
@@ -7,10 +7,14 @@ body {
 .footer-links {
   display: flex;
   flex-wrap: wrap;
-  // padding-top: 20px;
-  // padding-bottom: 20px;
 
-  background-color: $main_grey_color;
+  @media (min-width: $tablet-breakpoint) {
+    align-items: center;
+    padding: 44px 0 56px 0;
+  }
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .footer-links__item {
@@ -25,8 +29,9 @@ body {
   }
 
   @media (min-width: $tablet-breakpoint) {
-    flex-basis: 33.33333%;
     justify-content: space-between;
+
+    border-bottom: none;
   }
 
   // @media (min-width: $desktop-breakpoint) {
