--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -5,14 +5,16 @@ body {
 
 .footer-logo {
   display: flex;
+  // flex-shrink: 1;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 29px 10px 31px 10px;
-  // padding-top: 30px;
-  // padding-bottom: 30px;
+  // padding: 29px 10px 31px 10px;
+  padding: 29px 0 31px 0;
 
   @media (min-width: $tablet-breakpoint) {
+    flex-basis: 25%;
     justify-content: flex-start;
+    padding: 0;
   }
 }
 
