--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,6 +4,8 @@ body {
 }
 
 .page-header {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -19,6 +21,19 @@ body {
   @media (min-width: $desktop-breakpoint) {
     padding-top: 55px;
     padding-bottom: 55px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      z-index: -2;
+
+      width: 50vw;
+      height: 100%;
+
+      background-color: $main_green_color;
+    }
   }
 }
 
@@ -30,10 +45,14 @@ body {
   cursor: default;
 
   @media (min-width: $tablet-breakpoint) {
+    flex-basis: 30%;
     padding-top: 0;
     padding-bottom: 0;
   }
 
+  @media (min-width: $desktop-breakpoint) {
+    flex-basis: 50%;
+  }
   // @media (min-width: $desktop-breakpoint) {
   //
   // }
@@ -52,7 +71,6 @@ body {
   }
 }
 
-// TODO = 2 = сделать hover state
 .page-header__logo {
   width: 190px;
   height: 38px;
@@ -73,5 +91,11 @@ body {
 }
 
 .page-header__nav {
-  //
+  @media (min-width: $tablet-breakpoint) {
+    flex-basis: 70%;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    flex-basis: 50%;
+  }
 }
