--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -12,12 +12,34 @@ body {
   width: 320px;
   height: 240px;
   margin-left: -20px;
+
+
+  @media (min-width: $tablet-breakpoint) {
+    width: 690px;
+    height: 517px;
+    margin: auto;
+
+    // background-color: $main_grey_color;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .slider__photo {
   display: none;
   width: 320px;
   height: 240px;
+
+  @media (min-width: $tablet-breakpoint) {
+    width: 690px;
+    height: 517px;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .slider__toggles {
@@ -27,6 +49,14 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 32px 39px 32px 44px;
+
+  @media (min-width: $tablet-breakpoint) {
+    padding: 20px 69px 32px 69px;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .slider__toggle {
