--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,8 +4,11 @@ body {
 }
 
 .page-header {
-  position: relative;
+  // position: relative;
+}
 
+.page-header__wrapper {
+  // position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -21,26 +24,13 @@ body {
   @media (min-width: $desktop-breakpoint) {
     padding-top: 55px;
     padding-bottom: 55px;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 50%;
-      z-index: -2;
-
-      width: 50vw;
-      height: 100%;
-
-      background-color: $main_green_color;
-    }
   }
 }
 
 .page-header__link {
   // .logo-link
-  padding-top: 11px;
-  padding-bottom: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   cursor: default;
 
@@ -76,15 +66,11 @@ body {
   height: 38px;
 
   @media (min-width: $tablet-breakpoint) {
-    // width: 184px;
-    // height: 61px;
     width: 173px;
     height: 58px;
   }
 
   @media (min-width: $desktop-breakpoint) {
-    // width: 184px;
-    // height: 55px;
     width: 202px;
     height: 59px;
   }
