module5-task1 delete wrapper paddings

--- a/source/sass/blocks/health-program.scss
+++ b/source/sass/blocks/health-program.scss
@@ -27,7 +27,7 @@ body {
 
       display: inherit;
       width: 50%;
-      height: 698px;
+      height: 696px;
     }
   }
 
@@ -56,8 +56,8 @@ body {
       top: 0;
       left: 50%;
       z-index: -2;
-      // display: block;
 
+      display: block;
       width: 720px;
       height: 696px;
       margin: 0 0;
