--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,21 +5,32 @@ body {
 }
 
 // 320 mobile
-$mobile-wrapper: 320px;
-$mobile-padding: 20px;
-$mobile-width-only: 767;
+// $mobile-wrapper: 320px;
+// $mobile-padding: 20px;
+// $mobile-width-only: 768;
+$mobile-wrapper: 280px;
+$mobile-padding: 0;
+$mobile-width-only: 768;
+
 
 // 768 tablet
+// $tablet-breakpoint: 768px;
+// $tablet-wrapper: 768px;
+// $tablet-padding: 30px;
+
 $tablet-breakpoint: 768px;
-$tablet-wrapper: 768px;
-$tablet-padding: 30px;
+$tablet-wrapper: 708px;
+$tablet-padding: 0;
 
 // 1300 desktop
 $desktop-breakpoint: 1300px;
 
 // $desktop-wrapper: 1440px;
-$desktop-wrapper: 1300px;
-$desktop-padding: 40px;
+// $desktop-wrapper: 1300px;
+// $desktop-padding: 40px;
+
+$desktop-wrapper: 1220px;
+$desktop-padding: 0;
 
 // --------------------------
 // basic colors
