--- a/source/sass/blocks/health-program.scss
+++ b/source/sass/blocks/health-program.scss
@@ -38,6 +38,7 @@ body {
     right: 0;
     left: 0;
     z-index: -1;
+    // width: 320px;
 
     width: 320px;
     height: 305px;
@@ -58,11 +59,13 @@ body {
       z-index: -2;
 
       display: block;
-      width: 720px;
+      width: 50%;
       height: 696px;
-      margin: 0 0;
+      margin: 0;
 
       background-image: url("../img/index-background-desktop@1x.jpg");
+      background-position: top left;
+      background-size: cover;
     }
   }
 
