--- a/source/sass/blocks/health-program.scss
+++ b/source/sass/blocks/health-program.scss
@@ -6,30 +6,31 @@ body {
 .health-program {
   position: relative;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -2;
+  // Зеленый фон за фоновым изображением кошки - лишний код
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   z-index: -2;
 
-    width: 100%;
-    height: 305px;
+  //   width: 100%;
+  //   height: 305px;
 
-    background-color: $main_green_color;
+  // background-color: $main_green_color;
 
-    @media (min-width: $tablet-breakpoint) {
-      display: none;
-    }
+  // @media (min-width: $tablet-breakpoint) {
+  //   display: none;
+  // }
 
-    @media (min-width: $desktop-breakpoint) {
-      left: 50%;
+  // @media (min-width: $desktop-breakpoint) {
+  //   left: 50%;
 
-      display: inherit;
-      width: 50%;
-      height: 696px;
-    }
-  }
+  //   display: block;
+  //   width: 50%;
+  //   height: 696px;
+  // }
+  // }
 
   &::after {
     content: "";
@@ -38,12 +39,12 @@ body {
     right: 0;
     left: 0;
     z-index: -1;
-    // width: 320px;
 
-    width: 320px;
+    width: 100%;
     height: 305px;
     margin: 0 auto;
 
+    background-color: $main_green_color;
     background-image: url("../img/index-background-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: top center;
@@ -63,6 +64,7 @@ body {
       height: 696px;
       margin: 0;
 
+      background-color: $main_green_color;
       background-image: url("../img/index-background-desktop@1x.jpg");
       background-position: top left;
       background-size: cover;
@@ -84,21 +86,19 @@ body {
   padding-top: 28px;
   padding-bottom: 10px;
 
-  // border-bottom: 1px solid transparent;
-
   @media (min-width: $tablet-breakpoint) {
     align-items: flex-start;
     // margin-bottom: 510px;
     padding-top: 30px;
     padding-bottom: 518px;
-    padding-left: 117px;
+    padding-left: 87px;
   }
 
   @media (min-width: $desktop-breakpoint) {
     margin-bottom: 0;
     padding-top: 53px;
     padding-bottom: 180px;
-    padding-left: 120px;
+    padding-left: 81px;
   }
 }
 
